<resources>
    <string name="app_name">AgarapFinalExamY</string>
    <string name="register_text">Register</string>
    <string name="octocat_text">Octocat logo</string>
    <string name="password_text">Password</string>
    <string name="cell_name">Tictactoe chip</string>
    <string name="restart_text">Restart</string>
    <string name="play_again_text">Play Again</string>
    <string name="jake_text">Jake:</string>
    <string name="finn_text">Finn:</string>
    <string name="board_text">Board</string>
    <string name="check_balance_text">Check Balance</string>
    <string name="account_number_text">Account Number</string>
    <string name="login_text">Login</string>
    <string name="account_password_text">Account Password:</string>
    <string name="account_number_hint_text">1234-5678-9</string>
    <string name="account_password_hint_text">********</string>
    <string name="account_balance_text">Account Balance:</string>
    <string name="account_balance_hint_text">123456789</string>
    <string name="account_pin_text">Account PIN:</string>
    <string name="account_pin_hint_text">1234</string>
    <string name="withdraw_text">Withdraw</string>
    <string name="username_text">Username</string>
    <string name="greetings_text">Good day,</string>
    <string name="tictactoe_text">TicTacToe</string>
    <string name="triangular_text">Triangular</string>
    <string name="atm_text">ATM</string>
    <string name="animation_text">Animation</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="logout_text">Logout</string>
</resources>
