<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.afagarap.agarapfinalexamy.AtmLoginActivity">

    <ImageView
        android:id="@+id/imageViewOctocatAtmLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:alpha="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/octocat"
        android:contentDescription="@string/octocat_text"/>

    <EditText
        android:id="@+id/accountNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_number_text"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginStart="86dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/accountPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountNumberEditText" />

    <Button
        android:id="@+id/atmLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_text"
        app:layout_constraintLeft_toRightOf="@+id/atmLoginRegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/accountPasswordEditText" />

    <Button
        android:id="@+id/atmLoginRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/accountPasswordEditText"
        android:layout_marginStart="85dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>